# agents-crypto-trading

./: .gitignore  .pre-commit-config.yaml  config.py  pyproject.toml
src/: config.py
src/agents/analysts/: models.py  news_analyst.py  prompts.py  technical_analysis.py  technical_analyst.py
src/agents/analysts/context/: tech.py
src/agents/backtesting/: backtest.py  backtest_res.csv  tech_analyst.py
src/agents/utils/: exchange_utils.py  general.py  tech_indicators.py
src/prompts/: analysts.py
