[project]
name = "agents-crypto-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "httpx-auth>=0.23.1",
    "mplfinance>=0.12.10b0",
    "pandas>=2.3.3",
    "pydantic-ai>=1.0.16",
    "tiingo>=0.16.1",
]
