[project]
name = "agents-crypto-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fpdf>=1.7.2",
    "httpx-auth>=0.23.1",
    "markdown>=3.10",
    "mplfinance>=0.12.10b0",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "pybit>=5.12.0",
    "pydantic-ai>=1.0.16",
    "ta>=0.11.0",
    "ta-lib>=0.6.7",
    "tabulate>=0.9.0",
]
